--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
-    "express": "^4.15.3",
+    "chart.js": "^2.9.4",
+    "d3": "^6.3.0",
+    "express": "^4.17.1",
     "node-fetch": "^1.7.3",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
     "webpack": "^3.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^2.0.6"
   }
 }
