Edit file structure

--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "test",
+  "name": "myTime",
   "version": "1.0.0",
   "description": "Ray Liang's AppAcademy jS project",
-  "main": "app.js",
+  "main": "index.js",
   "repository": "https://github.com/bigcachemoney/myTime",
-  "license": "MIT",
-  "directories": {
-    "lib": "lib"
-  },
-  "engines": {
-    "node": ">=8.1.0"
-  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ],
   "scripts": {
-    "build": "webpack --watch",
-    "start": "node app.js",
-    "start:debug": "DEBUG=* node app.js"
+    "start": "webpack-dev-server --config webpack.dev.js && NODE_ENV=development",
+    "webpack:watch": "webpack --watch --config webpack.dev.js && NODE_ENV=development",
+    "webpack:build": "webpack --config webpack.prod.js  --optimize-minimize && NODE_ENV=production"
   },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "chart.js": "^2.9.4",
-    "d3": "^6.3.0",
-    "express": "^4.17.1",
-    "node-fetch": "^1.7.3",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7",
-    "webpack": "^3.4.1"
-  },
+  "author": "Ray Liang",
+  "license": "ISC",
+  "dependencies": {},
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
+    "file-loader": "^5.1.0",
+    "mini-css-extract-plugin": "^0.8.2",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "sass": "^1.27.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.3.0",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   }
 }
