--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "author": "Ray Liang",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "chart.js": "^2.9.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
